--- a/GE.WebUI/Web.config
+++ b/GE.WebUI/Web.config
@@ -6,8 +6,9 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=u0103269_gameexecom_2;Persist Security Info=True;User ID=sa;Password=Luia124445#" />
     <!--<add name="DbContext" providerName="System.Data.SqlClient" connectionString="Server=37.140.192.61;Database=u0103269_gameexecom_2;User ID=u0103269_developer;Password=Luia124445#;Connection Timeout=30;" />-->
@@ -29,7 +30,7 @@
 
     <add key="MaxPictureLength" value="153600" />
   </appSettings>
-  
+
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5.2" />
@@ -46,12 +47,13 @@
       <clientCache cacheControlCustom="public;max-age" cacheControlMaxAge="10.00:00:00" cacheControlMode="UseMaxAge" />
     </staticContent>
     <urlCompression doDynamicCompression="true" doStaticCompression="true" dynamicCompressionBeforeCache="true" />
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
