--- a/GE.WebUI/Web.config
+++ b/GE.WebUI/Web.config
@@ -19,8 +19,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--smtp-->
-    <add key="NoReplyMail" value="noreply@game-exe.com" />
-    <add key="NoReplyMailPassword" value="Luia124445#game-exe.com" />
+    <add key="NoReplyEmail" value="noreply@game-exe.com" />
+    <add key="NoReplyEmailPassword" value="Luia124445#game-exe.com" />
+    <add key="NoReplySmtpHost" value="mail.game-exe.com" />
+    <add key="NoReplySmtpPort" value="587" />
     <!--recaptcha-->
     <add key="SiteSettingsGoogleRecaptchaSiteKey" value="6LfPXSYTAAAAALNd4uO0Vp8qQX8rmha7B9grIVFh" />
     <add key="SiteSettingsGoogleRecaptchaSecretKey" value="6LfPXSYTAAAAAEIjaztA4OlM42MbCPA3Ieanll0W" />
