--- a/GE.WebUI/Web.Release.config
+++ b/GE.WebUI/Web.Release.config
@@ -10,7 +10,7 @@
     -->
   <connectionStrings>
     <add name="DbContext"
-      connectionString="Server=37.140.192.61;Database=u0103269_gameexecom_2;User ID=u0103269_developer;Password=Luia124445#;Connection Timeout=30;"
+      connectionString="Server=(local);Database=u0103269_gameexecom_2;User ID=u0103269_developer;Password=Luia124445#;Connection Timeout=30;"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
 
