--- a/GE.WebUI/Areas/Admin/Views/web.config
+++ b/GE.WebUI/Areas/Admin/Views/web.config
@@ -22,6 +22,7 @@
         <add namespace="GE.WebUI.ViewModels" />
         <add namespace="SX.WebCore.ViewModels" />
         <add namespace="SX.WebCore.HtmlHelpers" />
+        <add namespace="GE.WebUI.HtmlHelpers"/>
         
       </namespaces>
     </pages>
