--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -289,6 +289,7 @@
     <Compile Include="Controllers\SubscribersController.cs" />
     <Compile Include="Controllers\ValutesController.cs" />
     <Compile Include="Controllers\YoutubeVideosController.cs" />
+    <Compile Include="HtmlHelpers\GameItemMenu.cs" />
     <Compile Include="Hubs\HubSteamApps.cs" />
     <Compile Include="Infrastructure\BreadcrumbsManager.cs" />
     <Compile Include="Infrastructure\DbContext.cs" />
@@ -308,6 +309,7 @@
     <Compile Include="Infrastructure\Repositories\RepoSiteTestSetting.cs" />
     <Compile Include="Infrastructure\Repositories\RepoSiteTestSubject.cs" />
     <Compile Include="Infrastructure\Repositories\RepoSteamApp.cs" />
+    <Compile Include="Infrastructure\Repositories\RepoSteamNews.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Aphorism.cs" />
     <Compile Include="Models\Article.cs" />
@@ -328,6 +330,7 @@
     <Compile Include="Models\SiteTestSubject.cs" />
     <Compile Include="Infrastructure\ModelBinders\VMMaterialCategoryModelBinder.cs" />
     <Compile Include="Models\SteamApp.cs" />
+    <Compile Include="Models\SteamNews.cs" />
     <Compile Include="ViewModels\VMInfographic.cs" />
     <Compile Include="ViewModels\VMLastMaterialsBlock.cs" />
     <Compile Include="ViewModels\VMPopularYoutubeVideoArchiveItem.cs" />
@@ -364,6 +367,7 @@
     <Compile Include="ViewModels\VMSiteTestStepNormal.cs" />
     <Compile Include="ViewModels\VMSiteTestSubject.cs" />
     <Compile Include="ViewModels\VMSteamApp.cs" />
+    <Compile Include="ViewModels\VMSteamNews.cs" />
     <Content Include="Areas\Admin\Scripts\editMaterialPage.js" />
     <Content Include="Areas\Admin\Scripts\games.js" />
     <Content Include="Areas\Admin\Scripts\steam.js" />
@@ -428,6 +432,7 @@
     <Content Include="Areas\Admin\Views\Steam\_GridViewAppFree.cshtml" />
     <Content Include="Areas\Admin\Views\Games\_ModalLinkedSteamApps.cshtml" />
     <Content Include="Areas\Admin\Views\Steam\_GridViewAppLinked.cshtml" />
+    <Content Include="Areas\Admin\Views\Games\_ModalSteamAppNews.cshtml" />
     <None Include="Properties\PublishProfiles\PROD.pubxml" />
     <Content Include="packages.config" />
     <Content Include="Scripts\currency-provider.js" />
@@ -575,7 +580,6 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Areas\Admin\Scripts\ts\" />
     <Folder Include="content\dist\i\temp\" />
     <Folder Include="less\" />
   </ItemGroup>
