--- a/GE.WebUI/Web.config
+++ b/GE.WebUI/Web.config
@@ -10,7 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=u0103269_gameexecom_2;Persist Security Info=True;User ID=sa;Password=Luia124445#" />
+    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=(local);Initial Catalog=u0103269_gameexecom_2;Persist Security Info=True;User ID=sa;Password=Luia124445#" />
     <!--<add name="DbContext" providerName="System.Data.SqlClient" connectionString="Server=37.140.192.61;Database=u0103269_gameexecom_2;User ID=u0103269_developer;Password=Luia124445#;Connection Timeout=30;" />-->
   </connectionStrings>
   <appSettings>
