https://github.com/EugeneKormin/Game-exe/issues/309

--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -386,6 +386,7 @@
     <Content Include="content\dist\i\faveicon.png" />
     <Content Include="content\dist\i\incognito.png" />
     <Content Include="content\dist\i\logo.png" />
+    <Content Include="content\dist\i\no-photo.jpg" />
     <Content Include="content\dist\i\testsubject.png" />
     <Content Include="content\dist\js\currency-provider.min.js" />
     <Content Include="content\dist\js\ge-aphorisms.min.js" />
