--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Areas\Admin\Controllers\BannersController.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
     <Compile Include="Areas\Admin\Controllers\CommentsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CookiesController.cs" />
     <Compile Include="Areas\Admin\Controllers\DeliveryController.cs" />
     <Compile Include="Areas\Admin\Controllers\EmployeesController.cs" />
     <Compile Include="Areas\Admin\Controllers\ErrorsController.cs" />
@@ -435,6 +436,8 @@
     <Content Include="Areas\Admin\Views\Games\_ModalLinkedSteamApps.cshtml" />
     <Content Include="Areas\Admin\Views\Steam\_GridViewAppLinked.cshtml" />
     <Content Include="Areas\Admin\Views\Games\_ModalSteamAppNews.cshtml" />
+    <Content Include="Areas\Admin\Views\Cookies\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Cookies\_GridView.cshtml" />
     <None Include="Properties\PublishProfiles\PROD.pubxml" />
     <Content Include="packages.config" />
     <Content Include="Scripts\currency-provider.js" />
